Added note at top

--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,5 @@
+Note: these instructions are generic.  See the README (README.md) file for more specific information
+
 Installation Instructions
 *************************
 
