--- a/doc/multiLocusLogic.tex
+++ b/doc/multiLocusLogic.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{fullpage,color,pgf,tikz}
 \usepackage{authblk}
-\title{Logic behind the bitsets used for updating diploids in multilocus simulations.  This document is \texbf{not} library documentation and is not intended to make sense to library users.  It is here to remind me what a particularly terse block of code does.}
+\title{Logic behind the bitsets used for updating diploids in multilocus simulations.  This document is \textbf{not} library documentation and is not intended to make sense to library users.  It is here to remind me what a particularly terse block of code does.}
 \author[1]{Kevin R. Thornton}
 \affil[1]{Department of Ecology and Evolutionary Biology, UC Irvine}
 \date{}
