--- a/test/NeutralModels.Rmd
+++ b/test/NeutralModels.Rmd
@@ -23,7 +23,7 @@ plot(ecdf(ms$pi),add=T,col="red",do.p=F)
 plot(ecdf(fwdpp$rm),main="Min. no. rec. events",do.p=F)
 plot(ecdf(ms$rm),add=T,col="red",do.p=F)
 
-plot(ecdf(fwdpp$Hprime),main="H' (norm. Fay-Wu H",do.p=F)
+plot(ecdf(fwdpp$Hprime),main="H' (norm. Fay-Wu H)",do.p=F)
 plot(ecdf(ms$Hprime),add=T,col="red",do.p=F) 
 }
 ```
@@ -49,7 +49,7 @@ N=1000
 ====
 ```{r}
 seed=as.integer(runif(1,0,4.2e8))
-print(paste("../examples/diploid 100 10 10 1000 10 ",NSIMS,seed,"|msstats"))
+print(paste("../examples/diploid 1000 10 10 1000 10 ",NSIMS,seed,"|msstats"))
 f=pipe(paste("../examples/diploid 1000 10 10 10000 10 ",NSIMS,seed,"|msstats"))
 fwdpp=read.table(f,header=T,colClasses=rep("numeric",21))
 #close(f)
