--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-1.  Talk about using <chrono> shows that run time per gen doesn't hit
-   an equilibrium until about 10N generations.
-2. Check if moving adjust_mutation_counts call is a good idea in the
+1. Check if moving adjust_mutation_counts call is a good idea in the
    multilocus sampler
+2. Update other versions of remove_fixed_lost
